--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -249,4 +249,8 @@
 
 
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment_one">Hello blank fragment ONE</string>
+    <string name="hello_blank_fragment_two">Hello blank fragment TWO</string>
+
 </resources>
