Fixed issue where navigation view had a black background. Has been changed to white

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="Communication">Communication</string>
 
 
     //Description for the About us and general sections of the app
